@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,13 +38,11 @@ import javax.xml.stream.events.EntityReference;
 import javax.xml.stream.events.XMLEvent;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.XMLStreamReaderTest.SupportDTDTest
  * @run testng/othervm stream.XMLStreamReaderTest.SupportDTDTest
  * @summary Test SUPPORT_DTD and IS_REPLACING_ENTITY_REFERENCES.
  */
@@ -77,7 +75,6 @@ import org.testng.annotations.Test;
 *       The current jaxp implementation actually throws a nullpointexception. A better error message could be used.
 *
 */
-@Listeners({jaxp.library.FilePolicy.class})
 public class SupportDTDTest {
     final boolean DEBUG = false;
     final String _file = "ExternalDTD.xml";
